--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,13 +12,16 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - name: Select Xcode 15.4
+        run: sudo xcode-select -s /Applications/Xcode_15.4.app
+
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Set up Swift
+      - name: Set up Swift 5.10
         uses: swift-actions/setup-swift@v1
         with:
-          swift-version: '5.9'  # Or '5.10' if you're using Swift 5.10 or Xcode 15.4
+          swift-version: '5.10'
 
-      - name: Run tests
+      - name: Run Swift Tests
         run: swift test --enable-code-coverage
